--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <link rel="manifest" href="/manifest.json" />
     
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-    
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
