--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-    
+
+
     <link rel="manifest" href="/manifest.json" />
     
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
@@ -26,9 +27,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <!-- map -->
+
+
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  
 </html>
